public/src/pages/index.css
/* /* body {
  margin: none;
}

.rectangle {
  width: 30%;
  height: fit-content;
  margin-top: 2vh;
  flex-shrink: 0;
  min-width: 500px;
  border-radius: 50px;
  border: 2px solid transparent;
  background: rgba(0, 22, 53, 0.05);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: white;
  overflow: auto;
  backdrop-filter: blur(10px);
  box-shadow: 0 0 10px 5px white;
}

.button {
  justify-content: center;
  background-color: #4e0eff;
  color: white;
  margin-top: 30px;
  padding: 1rem 2rem;
  border: none;
  font-weight: bold;
  cursor: pointer;
  border-radius: 0.4rem;
  font-size: 1rem;
  text-transform: uppercase;
  transition: background-color 0.3s;
}

.button:hover {
  background-color: #652eff;
  box-shadow: 0 0 10px 5px white;
}

.crossDiv {
  margin: none;
  width: 100%;
  height: 100vh;
  margin-top: 2vh;
  /* flex-shrink: 0;
  min-width: 500px;
  border-radius: 50px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: white;
  overflow: auto;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.heading {
  color: white;
}

.thank {
  font-size: 70px;
  font-weight: bolder;
  text-shadow: 0 0 10px white;
} */
body {
  margin: none;
}
html, body {
  width: 100%;
  margin: 0;
  padding: 0;
}

.container {
  display: flex;
  width: 90vw;
  height: 90vh;
}

.div1, .div2 {
  flex: 1;
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; 
}
.rectangle {
  width: 30%;
  height: fit-content;
  margin-top: 2vh;
  flex-shrink: 0;
  min-width: 500px;
  border-radius: 50px;
  border: 2px solid transparent;
  background: rgba(0, 22, 53, 0.05);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: white;
  overflow: auto;
  backdrop-filter: blur(10px);
  box-shadow: 0 0 10px 5px white;
}

@media (max-width: 768px) {
  .rectangle {
    width: 80%;
    min-width: unset;
  }
}

.button {
  justify-content: center;
  background-color: #4e0eff;
  color: white;
  margin-top: 30px;
  padding: 1rem 2rem;
  border: none;
  font-weight: bold;
  cursor: pointer;
  border-radius: 0.4rem;
  font-size: 1rem;
  text-transform: uppercase;
  transition: background-color 0.3s;
}

.button:hover {
  background-color: #652eff;
  box-shadow: 0 0 10px 5px white;
}

.crossDiv {
  margin: none;
  width: 100%;
  height: 100vh;
  margin-top: 2vh;
  flex-shrink: 0;
  min-width: 500px;
  border-radius: 50px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: white;
  overflow: auto;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

@media (max-width: 768px) {
  .crossDiv {
    min-width: unset;
  }
}

.heading {
  color: white;
}

.thank {
  font-size: 70px;
  font-weight: bolder;
  text-shadow: 0 0 10px white;
}

@media (max-width: 768px) {
  .thank {
    font-size: 50px;
  }
} 

